docs/specs/grammar/qpex.ebnf
(* QPex grammar — Normative Draft matching compiler/qpex/lexer.py + parser.py
   (2026-07-23). Character set: Unicode source; identifiers ASCII [A-Za-z_][A-Za-z0-9_]*.
   Case-sensitive. *)

(* ========== Lexical ========== *)

letter         = "A" | … | "Z" | "a" | … | "z" | "_" ;
digit          = "0" | … | "9" ;
ident          = letter, { letter | digit } ;

(* ADR 0101 catch-up: decimal separators are allowed only between digits. *)
digit_sep      = "_";
digit_run      = digit, { digit | digit_sep, digit } ;
integer        = digit_run ;
float          = digit_run, ".", digit_run ;
string         = '"', { char - '"' }, '"' | "'", { char - "'" }, "'" ;

ket_label      = { letter | digit | "+" | "-" | "_" } ;
ket_lit        = "|", ket_label, ( ">" | "⟩" ) ;   (* |0>, |+>, |01>, … *)
bra_lit        = "⟨", ket_label, "|" ;
tensor_op      = "*|*" | "⊗" ;
dagger_op      = "†" ;

comment_line   = "//", { char - newline }, newline ;
whitespace     = " " | "\t" | "\n" | "\r" ;

(* Keywords — Active *)
active_kw = "class" | "interface" | "impl" | "package" | "import"
          | "namespace" | "enum" | "struct" | "fn" | "return"
          | "forEach" | "dynamic" | "state" | "let" | "when"
          | "coin" | "dirac" | "vacuum" | "evolve" | "measure"
          | "snapshot" | "inspect" | "this" | "val" | "var"
          | "module" | "exports" | "requires" | "private" ;

(* Keywords — Contextual (parser soft) *)
contextual_kw = "else" | "pub" | "true" | "false" | "to" | "times"
              | "for" | "under" | "in" | "until" | "max" ;

(* Keywords — Forbidden (hard error) *)
forbidden_kw = "if" | "switch" | "while" | "break" | "return" | "new"
             | "null" | "try" | "catch" | "throw" | "Thread" | "async" | "await" ;

(* Keywords — Retired (diagnostic + fix-it) *)
retired_kw = "observe" | "span" | "fun" | "public" | "trait" ;

(* Operators / punctuators *)
op = "|>" | "->" | "*|*" | "==" | "!=" | "<=" | ">=" | "+" | "-" | "*" | "/"
   | "^" | "=" | "<" | ">" | "." | "," | ":" | ";" | ".." | "!" | "⊗" | "†"
   | "(" | ")" | "{" | "}" | "[" | "]" ;

(* ========== Compilation unit ========== *)

compilation_unit = [ package_decl ], [ package_metadata ], { import_decl },
                   { top_level_decl }, [ main_fun ], EOF ;

package_decl = "package", dotted_path ;
package_metadata = "qpex_version", "=", string ;
import_decl  = "import", import_path ;
import_path  = ident, { ".", ( ident | "*" ) } ;
dotted_path  = ident, { ".", ident } ;

top_level_decl = fun_decl | class_decl | interface_decl | impl_decl
               | namespace_decl | enum_decl | struct_decl | scientific_scope_decl ;
(* Executable stmts at this level → TOPLEVEL_EXECUTION_ERROR *)

main_fun = [ "pub" ], "fn", "main", "(", [ params ], ")",
            "->", "Unit", block ;
fun_decl = [ "pub" ], "fn", ident, "(", [ params ], ")",
            "->", type_ref, block ;
(* `fn init` is the constructor-only semantic exception and omits the arrow. *)
params   = param, { ",", param } ;
param    = ident, [ ":", type_ref ] ;

class_decl     = "class", ident, [ ":", ident, { ",", ident } ], [ "{", …, "}" ] ;
interface_decl = "interface", ident, [ "{", …, "}" ] ;
impl_decl      = "impl", type_ref, "for", type_ref, "{", { fun_decl }, "}" ;
namespace_decl = "namespace", dotted_path, "{", { top_level_decl }, "}" ;
enum_decl      = "enum", ident, "{", ident, { ",", ident }, "}" ;
struct_decl    = "struct", ident, "{", …, "}" ;
scientific_scope_decl = scientific_scope_head, ident, "{", …, "}" ;
scientific_scope_head = "theory" | "experiment" | "workflow" | "execution" | "report" | "system" ;

(* ========== Types (Type-First heads) ========== *)

type_ref = product_type | named_type ;
product_type = "(", type_ref, { ",", type_ref }, ")" ;  (* (Coin, Position) *)
named_type = ident, [ "<", type_ref, { ",", type_ref }, ">" ] ;
(* e.g. State<Length>, State<(Qubit, Position)>, Mass *)

(* ========== Statements (inside block / main) ========== *)

block = "{", { stmt }, [ result_expr ], "}" ;

(* A result expression is terminal and is permitted for ordinary fn/method
   bodies. `main` has no result expression; its terminal statement is measure. *)
result_expr = expr ;

stmt = state_bind
     | type_first_bind
     | tuple_bind
     | measure_stmt
     | snapshot_stmt ;

state_bind = "state", ( ident | "(", ident, { ",", ident }, ")" ), "=", expr ;

type_first_bind = type_ref,
                  ( ident | "(", ident, { ",", ident }, ")" ),
                  "=", ( expr | operator_expr ) ;
(* When type_ref is Operator, RHS is operator_expr (Pauli / N / coeffs).
   Product State<(A,B)> requires tuple names (ADR 0044). *)

(* Operator polynomials (Type-First Operator H = …) — ADR 0041 *)
operator_expr = op_sum ;
op_sum = op_product, { ( "+" | "-" ), op_product } ;
op_product = op_power, { "*", op_power } ;
op_power = op_unary, [ "^", integer ] ;
op_unary = [ "-" ], op_primary ;
op_primary = "(", operator_expr, ")"
           | integer | float
           | "N"
           | ( "I" | "X" | "Y" | "Z" ), [ "(", integer, ")" ]
           | ident ;
(* Capitalized / known quantity heads only *)

tuple_bind = "(", ident, { ",", ident }, ")", "=", expr ;

measure_stmt  = "measure", expr, [ "to", ident ] ;
snapshot_stmt = "snapshot", expr, "to", ident ;

(* ========== Expressions (precedence low → high) ========== *)

expr = pipe_expr ;

pipe_expr = comparison_expr, { "|>", comparison_expr } ;

comparison_expr = term_expr, { ( "==" | "!=" | "<" | "<=" | ">" | ">=" ), term_expr } ;

term_expr = factor_expr, { ( "+" | "-" ), factor_expr } ;

factor_expr = tensor_expr, { ( "*" | "/" ), tensor_expr } ;

tensor_expr = unary_expr, { tensor_op, unary_expr } ;

unary_expr = [ "-" ], call_expr ;

call_expr = primary, { call_suffix | attr_suffix } ;
call_suffix = "(", [ expr, { ",", expr } ], ")"
            (* not applied across newline before '(' *) ;
attr_suffix = ".", ident, [ "(", [ expr, { ",", expr } ], ")" ] ;

primary = integer | float | string | "true" | "false"
        | ket_lit
        | "coin", [ "(", ")" ]
        | "dirac", "(", expr, ")"
        | "vacuum", [ "(", ")" ]
        | "inspect", "(", expr, [ ",", string ], ")"
        | "when", when_body
        | "evolve", evolve_body
        | "(", expr, [ ",", expr, { ",", expr } ], ")"   (* group or tuple *)
        | ident, [ "->", expr ]                          (* lambda *)
        ;

when_body = "(", expr, ")", "{", when_arm, { when_arm }, "}" ;
when_arm  = ( "else" | literal_or_ident ), "->", expr, [ "," ] ;
(* Semantic (ADR 0039): arm expr MUST NOT contain nested `when`
   → NESTED_WHEN_ERROR. Not expressed in EBNF; enforced by pipeline pass. *)


(* Parser tries `under` before `times` / `for` (ADR 0038). *)
evolve_body =
      seed_list, "under", expr, "for", expr, [ evolve_braces ]
    | seed_list, "times", integer, evolve_braces
    | seed_list, "for", expr, evolve_braces
    ;

seed_list = "(", expr, { ",", expr }, ")" | expr ;

evolve_braces = "{", { "let", ident, "=", expr }, expr, "}" ;

literal_or_ident = integer | float | string | ident | "true" | "false" ;
