compiler/qpex/parser.py
"""QPex recursive-descent Parser (Phase 2.1 subset)."""

from __future__ import annotations

from .ast_nodes import (
    AssignStmt,
    Attr,
    BinOp,
    BinderOrigin,
    Block,
    Call,
    ClassDecl,
    Coin,
    CompilationUnit,
    Dirac,
    DiscretizationBridgeDecl,
    DiscretizationDecl,
    DynamicQpuStmt,
    EnumDecl,
    EvolveBody,
    EvolveExpr,
    Expr,
    ExprStmt,
    FieldDecl,
    ForEachStmt,
    FunDecl,
    ImportDecl,
    ImplDecl,
    Inspect,
    InterfaceDecl,
    BraLit,
    KetLit,
    Lambda,
    ListExpr,
    LetBind,
    LitBool,
    LitFloat,
    LitInt,
    LitString,
    MeasureExpr,
    MainDecl,
    Measure,
    ModuleInfoDecl,
    NamespaceDecl,
    OpBin,
    OpBinder,
    OpCall,
    OpIndexed,
    OpLit,
    OpNumber,
    OpQuadrature,
    OpGridQuad,
    OpHop,
    OpPauli,
    OpPow,
    OpVar,
    PackageDecl,
    Param,
    Pipe,
    ReturnStmt,
    Snapshot,
    ScientificScopeDecl,
    Span,
    StateBind,
    StructDecl,
    SuzukiPolicy,
    TensorExpr,
    TupleExpr,
    TypeRef,
    Vacuum,
    Var,
    WhenArm,
    WhenExpr,
)
from .tokens import Token, TokenKind


class ParseError(Exception):
    def __init__(self, message: str, line: int, col: int) -> None:
        super().__init__(message)
        self.line = line
        self.col = col
        self.message = message


def _flatten_namespaces(decls: list) -> list:
    """Expand `namespace A.B { class C … }` → ClassDecl(namespace=[A,B], name=C)."""
    out: list = []
    for d in decls:
        if isinstance(d, NamespaceDecl):
            for inner in _flatten_namespaces(d.decls):
                if isinstance(inner, (ClassDecl, FunDecl, EnumDecl, StructDecl)):
                    inner.namespace = list(d.path) + list(inner.namespace)
                    out.append(inner)
                else:
                    out.append(inner)
        else:
            out.append(d)
    return out


# Names the Operator-DSL parser (_op_expression / _op_primary) reserves for
# itself: `sum`/`product` binders and the Pauli/hop atoms. An `Operator`
# bind's factory-call heuristic must never treat these as an ordinary
# function call, even when immediately followed by `(` (LISS-0051).
_OPERATOR_DSL_RESERVED_ATOMS = {"sum", "product", "adjoint", "I", "X", "Y", "Z", "hop"}
_SUPPORTED_SOURCE_VERSIONS = frozenset({"1.0"})


class Parser:
    def __init__(self, tokens: list[Token]) -> None:
        self.tokens = tokens
        self.i = 0
        self.diagnostics: list[dict] = []
        self._prev: Token | None = None
        # Resolve reserved operator-looking calls against the complete source
        # declaration set.  A user callable named `Z` must remain a callable;
        # only an unresolved `Z(0)` is retired operator-index syntax.
        self._function_names = {
            tokens[index + 1].lexeme
            for index, token in enumerate(tokens[:-1])
            if token.kind == TokenKind.FUN
            and tokens[index + 1].kind == TokenKind.IDENT
        }

    def parse(self) -> CompilationUnit:
        start = self._span()
        package = None
        source_version = None
        imports: list[ImportDecl] = []
        decls: list = []
        main: MainDecl | None = None

        if self._check(TokenKind.PACKAGE):
            package = self._package()

        if self._at_package_source_version():
            source_version = self._package_source_version()

        while self._check(TokenKind.IMPORT):
            imports.append(self._import())

        while not self._check(TokenKind.EOF):
            if self._check(TokenKind.IDENT) and self._peek().lexeme in {
                "theory",
                "experiment",
                "workflow",
                "execution",
                "report",
                "system",
            }:
                decls.append(self._scientific_scope_decl())
            elif self._check(TokenKind.IDENT) and self._peek().lexeme == "discretization":
                decls.append(self._discretization_decl())
            elif self._check(TokenKind.IDENT) and self._peek().lexeme == "use":
                decls.append(self._discretization_bridge_decl())
            elif self._check(TokenKind.NAMESPACE):
                decls.append(self._namespace_decl())
            elif self._check(TokenKind.ENUM) or (
                self._is_visibility_start() and self._peek_after_visibility() == TokenKind.ENUM
            ):
                vis = self._parse_visibility()
                ed = self._enum_decl()
                ed.visibility = vis  # type: ignore[assignment]
                decls.append(ed)
            elif self._check(TokenKind.STRUCT) or (
                self._is_visibility_start()
                and self._peek_after_visibility() == TokenKind.STRUCT
            ):
                vis = self._parse_visibility()
                sd = self._struct_decl()
                sd.visibility = vis  # type: ignore[assignment]
                decls.append(sd)
            elif (
                self._check(TokenKind.PUBLIC)
               
                or self._check(TokenKind.PRIVATE)
                or self._check(TokenKind.FUN)
            ):
                nxt = self._peek_after_visibility()
                if nxt == TokenKind.CLASS:
                    vis = self._parse_visibility()
                    cd = self._class_decl()
                    cd.visibility = vis  # type: ignore[assignment]
                    decls.append(cd)
                elif nxt == TokenKind.ENUM:
                    vis = self._parse_visibility()
                    ed = self._enum_decl()
                    ed.visibility = vis  # type: ignore[assignment]
                    decls.append(ed)
                elif nxt == TokenKind.STRUCT:
                    vis = self._parse_visibility()
                    sd = self._struct_decl()
                    sd.visibility = vis  # type: ignore[assignment]
                    decls.append(sd)
                else:
                    fun = self._fun_decl()
                    if fun.name == "main":
                        if fun.return_type is None:
                            self.diagnostics.append(
                                {
                                    "code": "MISSING_RETURN_TYPE",
                                    "line": fun.span.line,
                                    "col": fun.span.col,
                                    "message": "`main` must declare `-> Unit`",
                                }
                            )
                        elif fun.return_type.name != "Unit":
                            self.diagnostics.append(
                                {
                                    "code": "MAIN_RETURN_TYPE_ERROR",
                                    "line": fun.span.line,
                                    "col": fun.span.col,
                                    "message": "`main` must return `Unit`",
                                }
                            )
                        if any(isinstance(stmt, ReturnStmt) for stmt in fun.body.stmts):
                            self.diagnostics.append(
                                {
                                    "code": "MAIN_RETURN_ERROR",
                                    "line": fun.span.line,
                                    "col": fun.span.col,
                                    "message": (
                                        "`main` must terminate with terminal `measure`; "
                                        "it cannot return a value"
                                    ),
                                }
                            )
                        elif fun.body.result is not None:
                            self.diagnostics.append(
                                {
                                    "code": "MAIN_RESULT_ERROR",
                                    "line": fun.span.line,
                                    "col": fun.span.col,
                                    "message": (
                                        "`main` must terminate with terminal `measure`; "
                                        "it cannot return a final expression"
                                    ),
                                }
                            )
                        if main is not None:
                            self.diagnostics.append(
                                {
                                    "code": "PARSE_ERROR",
                                    "line": fun.span.line,
                                    "col": fun.span.col,
                                    "message": "duplicate `main` entry point",
                                }
                            )
                        main = MainDecl(
                            params=fun.params,
                            body=fun.body,
                            span=fun.span,
                            return_type=fun.return_type,
                        )
                    else:
                        decls.append(fun)
            elif self._check(TokenKind.CLASS) or (
                self._is_visibility_start()
                and self._peek_after_visibility() == TokenKind.CLASS
            ):
                vis = self._parse_visibility()
                cd = self._class_decl()
                cd.visibility = vis  # type: ignore[assignment]
                decls.append(cd)
            elif self._check(TokenKind.INTERFACE):
                decls.append(self._interface_decl())
            elif self._check(TokenKind.IMPL):
                decls.append(self._impl_decl())
            elif self._is_toplevel_executable_start():
                tok = self._peek()
                self.diagnostics.append(
                    {
                        "code": "TOPLEVEL_EXECUTION_ERROR",
                        "line": tok.line,
                        "col": tok.col,
                        "message": (
                            "executable statements are forbidden at top level; "
                            "place them inside `pub fn main() -> Unit { … }`"
                        ),
                    }
                )
                self._skip_until_toplevel_resync()
            elif self._check(TokenKind.FORBIDDEN) or self._check(TokenKind.RETIRED):
                self._advance()
            elif self._check(TokenKind.ERROR):
                self._advance()
            else:
                tok = self._peek()
                if tok.kind == TokenKind.EOF:
                    break
                self.diagnostics.append(
                    {
                        "code": "PARSE_ERROR",
                        "line": tok.line,
                        "col": tok.col,
                        "message": f"unexpected token `{tok.lexeme}` at top level",
                    }
                )
                self._advance()

        self._check_scientific_scope_graph(decls)
        decls = _flatten_namespaces(decls)
        return CompilationUnit(
            package=package,
            imports=imports,
            decls=decls,
            main=main,
            span=start,
            source_version=source_version,
        )

    def _package_source_version(self) -> str | None:
        tok = self._peek()
        self._expect_ident_like()  # qpex_version
        self._expect(TokenKind.EQ)
        value = self._expect(TokenKind.STRING)
        version = str(value.literal)
        if version in _SUPPORTED_SOURCE_VERSIONS:
            return version
        self.diagnostics.append(self._unsupported_source_version_diag(tok.line, tok.col, version))
        return version

    def _at_package_source_version(self) -> bool:
        return self._check(TokenKind.IDENT) and self._peek().lexeme == "qpex_version"

    @staticmethod
    def _unsupported_source_version_diag(
        line: int, col: int, version: str
    ) -> dict[str, object]:
        return {
            "code": "UNSUPPORTED_QPEX_VERSION",
            "line": line,
            "col": col,
            "message": f"unsupported qpex_version `{version}`",
        }

    def _scientific_scope_decl(self) -> ScientificScopeDecl:
        start = self._span()
        kind = self._advance().lexeme
        name = self._expect_ident_like()
        self._expect(TokenKind.LBRACE)
        depth = 1
        body: list[Token] = []
        while depth > 0 and not self._check(TokenKind.EOF):
            tok = self._advance()
            if tok.kind == TokenKind.LBRACE:
                depth += 1
            elif tok.kind == TokenKind.RBRACE:
                depth -= 1
                if depth == 0:
                    break
            body.append(tok)
        references: list[str] = []
        symbols: list[str] = []
        for index, tok in enumerate(body):
            if tok.kind != TokenKind.IDENT:
                continue
            direct_reference = index and body[index - 1].lexeme in {
                "theory",
                "experiment",
                "workflow",
                "uses",
            }
            assigned_reference = (
                index >= 2
                and body[index - 1].kind == TokenKind.EQ
                and body[index - 2].lexeme in {
                    "theory",
                    "experiment",
                    "workflow",
                    "uses",
                }
            )
            if direct_reference or assigned_reference:
                references.append(tok.lexeme)
            if index + 1 < len(body) and body[index + 1].kind == TokenKind.EQ:
                symbols.append(tok.lexeme)
        if kind == "theory" and any(
            tok.lexeme in {"shots", "backend", "retry", "Host"} for tok in body
        ):
            self.diagnostics.append(
                {
                    "code": "PHASE_SCOPE_DEPENDENCY_ERROR",
                    "line": start.line,
                    "col": start.col,
                    "message": "Theory scope cannot reference execution/Host symbols",
                }
            )
        if kind == "theory" and any(tok.lexeme == "continuous_operator" for tok in body):
            self.diagnostics.append(
                {
                    "code": "DISCRETIZATION_REQUIRED_ERROR",
                    "line": start.line,
                    "col": start.col,
                    "message": "continuous operators require an explicit discretization contract",
                }
            )
        body_declarations = self._parse_scientific_body_declarations(body)
        registers = self._parse_system_registers(body) if kind == "system" else []
        if kind == "system":
            seen_registers: set[str] = set()
            for register_name, width in registers:
                if register_name in seen_registers:
                    self.diagnostics.append(
                        {
                            "code": "MULTI_REGISTER_SHAPE_ERROR",
                            "line": start.line,
                            "col": start.col,
                            "message": f"duplicate register `{register_name}` in system `{name}`",
                        }
                    )
                if width <= 0:
                    self.diagnostics.append(
                        {
                            "code": "MULTI_REGISTER_SHAPE_ERROR",
                            "line": start.line,
                            "col": start.col,
                            "message": f"register `{register_name}` requires a positive static width",
                        }
                    )
                seen_registers.add(register_name)
        workflow_fields, workflow_parameter_types = (
            self._parse_workflow_fields(body) if kind == "workflow" else ([], [])
        )
        return ScientificScopeDecl(
            kind=kind,
            name=name,
            references=references,
            symbols=symbols,
            span=start,
            body_declarations=tuple(body_declarations),
            workflow_fields=tuple(workflow_fields),
            workflow_parameter_types=tuple(workflow_parameter_types),
            registers=tuple(registers),
        )

    @staticmethod
    def _parse_system_registers(body: list[Token]) -> list[tuple[str, int]]:
        """Read the small, declarative `system` register-shape surface."""
        registers: list[tuple[str, int]] = []
        index = 0
        while index + 6 < len(body):
            if (
                body[index].lexeme == "register"
                and body[index + 1].kind == TokenKind.IDENT
                and body[index + 2].kind == TokenKind.COLON
                and body[index + 3].lexeme == "QubitRegister"
                and body[index + 4].kind == TokenKind.LT
                and body[index + 5].kind == TokenKind.INT
                and body[index + 6].kind in {TokenKind.GT, TokenKind.GE}
            ):
                width = int(body[index + 5].literal)
                registers.append((body[index + 1].lexeme, width))
                index += 7
                continue
            index += 1
        return registers

    def _discretization_decl(self) -> DiscretizationDecl:
        start = self._span()
        self._expect_ident_like()  # discretization
        name = self._expect_ident_like()
        self._expect(TokenKind.LBRACE)
        body: list[Token] = []
        depth = 1
        while depth > 0 and not self._check(TokenKind.EOF):
            token = self._advance()
            if token.kind == TokenKind.LBRACE:
                depth += 1
            elif token.kind == TokenKind.RBRACE:
                depth -= 1
                if depth == 0:
                    break
            body.append(token)
        field_heads = {"domain", "basis", "resolution", "boundary", "approximation", "error_bound"}
        fields: list[tuple[str, str]] = []
        index = 0
        while index < len(body):
            if body[index].lexeme not in field_heads:
                index += 1
                continue
            key = body[index].lexeme
            index += 1
            if index < len(body) and body[index].kind == TokenKind.EQ:
                index += 1
            values: list[str] = []
            while index < len(body) and body[index].lexeme not in field_heads:
                values.append(body[index].lexeme)
                index += 1
            if values:
                fields.append((key, self._normalize_contract_value(values)))
        return DiscretizationDecl(name=name, fields=tuple(fields), span=start)

    def _discretization_bridge_decl(self) -> DiscretizationBridgeDecl:
        start = self._span()
        self._expect_ident_like()
        contract = self._expect_ident_like()
        self._expect(TokenKind.FOR)
        source_parts = [self._expect_ident_like()]
        while self._match(TokenKind.DOT):
            source_parts.append(self._expect_ident_like())
        as_name = self._expect_ident_like()
        if as_name != "as":
            raise ParseError("expected `as` in discretization bridge", start.line, start.col)
        alias = self._expect_ident_like()
        self._match(TokenKind.SEMI)
        return DiscretizationBridgeDecl(
            contract=contract,
            source=".".join(source_parts),
            alias=alias,
            span=start,
        )

    @staticmethod
    def _normalize_contract_value(values: list[str]) -> str:
        value = " ".join(values)
        value = value.replace(" (", "(")
        value = value.replace("( ", "(").replace(" )", ")")
        value = value.replace("[ ", "[").replace(" ]", "]")
        return value

    def _parse_workflow_fields(self, body: list[Token]) -> tuple[list[tuple[str, str]], list[str]]:
        fields: list[tuple[str, str]] = []
        parameter_types: list[str] = []
        field_heads = {"experiment", "parameter", "observable", "until", "update", "backend"}
        index = 0
        while index < len(body):
            token = body[index]
            if token.lexeme not in field_heads:
                index += 1
                continue
            key = token.lexeme
            if key == "backend":
                self.diagnostics.append(
                    {
                        "code": "WORKFLOW_SURFACE_ERROR",
                        "line": token.line,
                        "col": token.col,
                        "message": "workflow surface cannot contain provider/backend values",
                    }
                )
            index += 1
            if key == "experiment" and index < len(body) and body[index].kind == TokenKind.EQ:
                index += 1
            if key == "update" and index < len(body) and body[index].kind == TokenKind.EQ:
                index += 1
            if key == "parameter":
                if index < len(body) and body[index].kind == TokenKind.IDENT:
                    fields.append((key, body[index].lexeme))
                    index += 1
                    if index < len(body) and body[index].kind == TokenKind.COLON:
                        index += 1
                        type_tokens: list[str] = []
                        while index < len(body) and body[index].lexeme not in field_heads:
                            type_tokens.append(body[index].lexeme)
                            index += 1
                        parameter_types.append("".join(type_tokens))
                continue
            if key == "observable":
                if index < len(body) and body[index].kind == TokenKind.IDENT:
                    value = body[index].lexeme
                    if value in {"Job", "Task", "ProviderSdk"}:
                        self.diagnostics.append(
                            {
                                "code": "WORKFLOW_SURFACE_ERROR",
                                "line": body[index].line,
                                "col": body[index].col,
                                "message": f"workflow cannot observe Host value `{value}`",
                            }
                        )
                    fields.append((key, value))
                    index += 1
                continue
            if key == "experiment":
                if index < len(body) and body[index].kind == TokenKind.IDENT:
                    fields.append((key, body[index].lexeme))
                    index += 1
                continue
            if key == "update":
                expression: list[Token] = []
                while index < len(body) and body[index].lexeme not in field_heads:
                    expression.append(body[index])
                    index += 1
                if len(expression) == 1 and expression[0].kind == TokenKind.IDENT:
                    fields.append((key, expression[0].lexeme))
                else:
                    self.diagnostics.append(
                        {
                            "code": "WORKFLOW_SURFACE_ERROR",
                            "line": token.line,
                            "col": token.col,
                            "message": "update must name a Host callback",
                        }
                    )
                continue
            expression: list[str] = []
            while index < len(body) and body[index].lexeme not in field_heads:
                expression.append(body[index].lexeme)
                index += 1
            if key == "until" and expression:
                fields.append((key, " ".join(expression)))
        return fields, parameter_types

    def _parse_scientific_body_declarations(self, body: list[Token]) -> list[Any]:
        """Preserve supported declaration forms inside a scientific scope."""

        if not body:
            return []
        eof = body[-1]
        nested = Parser(body + [Token(TokenKind.EOF, "", eof.line, eof.col)])
        declarations: list[Any] = []
        while not nested._check(TokenKind.EOF):
            if nested._is_type_first_start():
                saved = nested.i
                try:
                    declarations.append(nested._type_first_bind())
                    nested._match(TokenKind.SEMI)
                    continue
                except ParseError:
                    nested.i = saved
            nested._advance()
        self.diagnostics.extend(nested.diagnostics)
        return declarations

    def _check_scientific_scope_graph(self, decls: list) -> None:
        scopes = {d.name: d for d in decls if isinstance(d, ScientificScopeDecl)}
        graph = {
            name: [ref for ref in decl.references if ref in scopes]
            for name, decl in scopes.items()
        }
        visiting: set[str] = set()
        visited: set[str] = set()

        def visit(name: str) -> None:
            if name in visiting:
                decl = scopes[name]
                self.diagnostics.append(
                    {
                        "code": "PHASE_SCOPE_CYCLE_ERROR",
                        "line": decl.span.line,
                        "col": decl.span.col,
                        "message": f"scientific scope dependency cycle includes `{name}`",
                    }
                )
                return
            if name in visited:
                return
            visiting.add(name)
            for child in graph.get(name, []):
                visit(child)
            visiting.remove(name)
            visited.add(name)

        for name in graph:
            visit(name)

    def _is_toplevel_executable_start(self) -> bool:
        return (
            self._check(TokenKind.STATE)
            or self._check(TokenKind.MEASURE)
            or self._check(TokenKind.SNAPSHOT)
            or self._check(TokenKind.LET)
            or self._check(TokenKind.LPAREN)
            or self._is_type_first_start()
            or self._check(TokenKind.EVOLVE)
            or self._check(TokenKind.WHEN)
            or self._check(TokenKind.COIN)
            or self._check(TokenKind.DIRAC)
            or self._check(TokenKind.VACUUM)
            or self._check(TokenKind.INSPECT)
        )

    def _skip_until_toplevel_resync(self) -> None:
        """Recover after TOPLEVEL_EXECUTION_ERROR: skip one statement-ish chunk."""
        # Prefer consuming a well-formed stmt so diagnostics stay localized.
        try:
            self._stmt()
            return
        except ParseError:
            pass
        depth = 0
        while not self._check(TokenKind.EOF):
            tok = self._peek()
            if depth == 0 and tok.kind in {
                TokenKind.PUBLIC,
                TokenKind.FUN,
                TokenKind.CLASS,
                TokenKind.INTERFACE,
                TokenKind.PACKAGE,
                TokenKind.IMPORT,
            }:
                return
            if tok.kind == TokenKind.LBRACE:
                depth += 1
            elif tok.kind == TokenKind.RBRACE:
                depth = max(0, depth - 1)
            self._advance()

    def _package(self) -> PackageDecl:
        sp = self._span()
        self._expect(TokenKind.PACKAGE)
        path = self._dotted_path()
        return PackageDecl(path=path, span=sp)

    def _import(self) -> ImportDecl:
        sp = self._span()
        self._expect(TokenKind.IMPORT)
        path = self._dotted_path_import()
        name = path[-1] if path else ""
        return ImportDecl(path=path, name=name, span=sp)

    def _dotted_path(self) -> list[str]:
        parts = [self._expect_ident_like()]
        while self._match(TokenKind.DOT):
            parts.append(self._expect_ident_like())
        return parts

    def _dotted_path_import(self) -> list[str]:
        """`qpex.math` or `qpex.math.*`."""
        parts = [self._expect_ident_like()]
        while self._match(TokenKind.DOT):
            if self._match(TokenKind.STAR):
                parts.append("*")
                break
            parts.append(self._expect_ident_like())
        return parts

    def _is_visibility_start(self) -> bool:
        return self._check(TokenKind.PUBLIC) or self._check(TokenKind.PRIVATE)

    def _peek_after_visibility(self) -> TokenKind | None:
        """Look at token after an optional visibility keyword (`pub`/`private`)."""
        j = self.i
        if self.tokens[j].kind in {TokenKind.PUBLIC, TokenKind.PRIVATE}:
            j += 1
        if j < len(self.tokens):
            return self.tokens[j].kind
        return None

    def _parse_visibility(self) -> str:
        """ADR 0058: `pub` | `private` | (default → module-private)."""
        if self._match(TokenKind.PUBLIC):
            return "public"
        if self._match(TokenKind.PRIVATE):
            return "private"
        return "module"

    @staticmethod
    def _apply_underscore_privacy(name: str, vis: str) -> str:
        """Leading `_` ⇒ class/file private (noise-free encapsulation)."""
        if name.startswith("_") and not name.startswith("__"):
            return "private"
        return vis

    def parse_module_info(self) -> ModuleInfoDecl:
        """Parse a `module-info.qpex` compilation unit (ADR 0058)."""
        sp = self._span()
        self._expect(TokenKind.MODULE)
        name = self._dotted_path()
        exports: list[list[str]] = []
        requires: list[list[str]] = []
        self._expect(TokenKind.LBRACE)
        while not self._check(TokenKind.RBRACE) and not self._check(TokenKind.EOF):
            if self._match(TokenKind.EXPORTS):
                exports.append(self._dotted_path())
                self._match(TokenKind.SEMI)
            elif self._match(TokenKind.REQUIRES):
                requires.append(self._dotted_path())
                self._match(TokenKind.SEMI)
            elif self._check(TokenKind.FORBIDDEN) or self._check(TokenKind.RETIRED):
                self._advance()
            else:
                tok = self._peek()
                self.diagnostics.append(
                    {
                        "code": "PARSE_ERROR",
                        "line": tok.line,
                        "col": tok.col,
                        "message": (
                            f"expected `exports` or `requires` in module, "
                            f"got `{tok.lexeme}`"
                        ),
                    }
                )
                self._advance()
        self._expect(TokenKind.RBRACE)
        return ModuleInfoDecl(name=name, exports=exports, requires=requires, span=sp)

    def _fun_decl(self) -> FunDecl:
        sp = self._span()
        vis = self._parse_visibility()
        self._expect(TokenKind.FUN)
        name = self._expect_ident_like()
        vis = self._apply_underscore_privacy(name, vis)
        generic_bounds = self._generic_bounds()
        self._expect(TokenKind.LPAREN)
        params: list[Param] = []
        if not self._check(TokenKind.RPAREN):
            params.append(self._param())
            while self._match(TokenKind.COMMA):
                params.append(self._param())
        self._expect(TokenKind.RPAREN)
        return_type = None
        if self._match(TokenKind.ARROW):
            return_type = self._type_ref()
        effects = self._effects_clause()
        operator_return = return_type is not None and return_type.name == "Operator"
        body = self._block(operator_return=operator_return)
        if name not in {"init", "main"} and return_type is None:
            self.diagnostics.append(
                {
                    "code": "MISSING_RETURN_TYPE",
                    "line": sp.line,
                    "col": sp.col,
                    "message": f"`{name}` must declare an explicit return type",
                }
            )
        return FunDecl(
            name=name,
            params=params,
            body=body,
            span=sp,
            return_type=return_type,
            visibility=vis,
            effects=tuple(effects),
            generic_bounds=tuple(generic_bounds),
        )

    def _effects_clause(self) -> list[str]:
        """Parse the optional fixed effect annotation after a return type."""
        if self._peek().lexeme != "effects":
            return []
        self._advance()
        self._expect(TokenKind.LBRACE)
        effects: list[str] = []
        if not self._check(TokenKind.RBRACE):
            effects.append(self._expect_ident_like())
            while self._match(TokenKind.COMMA):
                effects.append(self._expect_ident_like())
        self._expect(TokenKind.RBRACE)
        return effects

    def _generic_bounds(self) -> list[tuple[str, str]]:
        """Parse the accepted inline `<T: Interface>` bound form."""
        if not self._match(TokenKind.LT):
            return []
        bounds: list[tuple[str, str]] = []
        while True:
            type_param = self._expect_ident_like()
            self._expect(TokenKind.COLON)
            bounds.append((type_param, self._expect_ident_like()))
            if not self._match(TokenKind.COMMA):
                break
        self._expect(TokenKind.GT)
        return bounds

    def _param(self) -> Param:
        name = self._expect_ident_like()
        ty = None
        if self._match(TokenKind.COLON):
            ty = self._type_ref()
        return Param(name=name, ty=ty)
